<resources>
    <string name="settings">Settings</string>
    <string name="current_settings">Current Settings</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="SettingsActivityTitle">Settings</string>
    <string name="WorkoutActivityTitle">Workout</string>
    <string name="NutritionActivityTitle">Nutrition</string>
    <string name="EnterMealTitle">Enter Meal</string>
    <string name="HomeScreenActivityTitle">Home</string>
    <string name="app_name" translatable="false">Health</string>
    <string name="workouttextview">Workouts</string>
    <string name="customWorkoutPageTitle">Custom Workouts</string>

    <string name="enter_meal">Enter A Meal</string>
    <string name="button_meal">Add Meal</string>
    <string name="todaysWorkoutButton">Today\'s Workout</string>
    <string name="insert_workout_here">insert standard workout here</string>
    <string name="insert_advanced_workout_here">insert advanced workout here</string>

    <!-- Quotes -->
    <string name="Q1"> "We are what we repeatedly do. Excellence then is not an act but a habit." - Aristotle</string>
    <string name="Q2"> "The difference between the impossible and the possible lies in a person's determination." - Tommy Lasorda</string>
    <string name="Q3"> "To give anything less than your best is to sacrifice the gift." - Steve Prefontaine</string>
    <string name="Q4"> "Strength does not come from physical capacity. It comes from an indomitable will." - Mahatma Gandhi</string>
    <string name="Q5"> "The worst thing I can be is the same as everybody else." - Arnold Schwarzenegger</string>

    <!-- Preference Keys -->
    <string name="PREF_WEIGHT"> Weight Pref</string>
    <string name="PREF_HEIGHT"> Height Pref</string>
    <string name="PREF_PROGRESS"> ProgressPref</string>
    <string name="PREF_AGE">Age Pref</string>


    <string name="motivation_station"><b><u>Motivation Station:</u></b></string>
    <string name="previously_created_workouts">Previously Created Workouts</string>
    <string name="activity">Activity:</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="weight">Weight:</string>


</resources>
